# windows-cpp-cmake

./: .clang-format  CMakeLists.txt  Makefile
src/: hello.cpp
tests/: hello_test.cc
